# nexus

./: .gitignore  BEDROCK_TESTING_PLAN.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  devenv.nix  taplo.toml
.cargo/: config.toml
.claude/: settings.local.json
.claude/agents/: integration-test-engineer.md  model-context-protocol-mcp-expert.md
.config/: nextest.toml
.github/actions/install-rust/: action.yml
.github/workflows/: auto-tag.yml  release.yml  test.yml
changelog/: 0.4.0.md  0.4.1.md  0.4.2.md  0.5.0.md  0.5.1.md  0.5.2.md  0.5.3.md  0.6.0.md  unreleased.md
crates/config/: CLAUDE.md  Cargo.toml
crates/config/src/: client_identification.rs  client_ip.rs  error.rs  lib.rs  llm.rs  loader.rs  mcp.rs  proxy.rs  server.rs  telemetry.rs
crates/config/src/telemetry/: exporters.rs  tracing.rs
crates/context/: Cargo.toml
crates/context/src/: authentication.rs  client_identity.rs  lib.rs
crates/fastrace-utils/: Cargo.toml
crates/fastrace-utils/src/: future.rs
crates/header-rules/: Cargo.toml
crates/header-rules/src/: lib.rs
crates/integration-tests/: CLAUDE.md  Cargo.toml  README.md  compose.yaml
crates/integration-tests/mock-mcp-servers/: adder_server.py  calculator_server.py  filesystem_server.py  simple_mcp_server.py  text_processor_server.py
crates/integration-tests/src/: downstream.rs  lib.rs  telemetry.rs  tools.rs
crates/integration-tests/src/llms/: anthropic.rs  bedrock.rs  google.rs  openai.rs  provider.rs
crates/integration-tests/src/tools/: adder.rs  calculator.rs  failing.rs  file_system.rs  header_inspector.rs  text_processor.rs
crates/integration-tests/tests/: integration_tests.rs
crates/integration-tests/tests/csrf/: mod.rs
crates/integration-tests/tests/header_rules/: llm.rs
crates/integration-tests/tests/llm/: bedrock.rs  error_handling.rs  forward_token.rs  mod.rs  model_configuration.rs  model_filter.rs  model_pattern.rs  openai.rs  token_limiting.rs
crates/integration-tests/tests/mcp/: compatibility.rs  mod.rs  prompts_resources.rs  resilience.rs  sse.rs  stdio.rs  streamable_http.rs  token_auth.rs
crates/integration-tests/tests/mcp_compatibility/: mod.rs
crates/integration-tests/tests/oauth2/: forwarding.rs  metadata.rs  token_limiting.rs
crates/integration-tests/tests/pmcp/: mod.rs
crates/integration-tests/tests/prompts_resources/: mod.rs
crates/integration-tests/tests/rate_limiting/: memory.rs  mod.rs  per_ip.rs
crates/integration-tests/tests/rbac/: execute.rs  mod.rs  search_access.rs  token_forwarding.rs
crates/integration-tests/tests/resilience/: mod.rs
crates/integration-tests/tests/sse/: mod.rs
crates/integration-tests/tests/stdio/: mod.rs
crates/llm/: CLAUDE.md  Cargo.toml
crates/llm/src/: error.rs  http_client.rs  lib.rs  messages.rs  protocol.rs  provider.rs  provider_mode.rs  proxy.rs  request.rs  server.rs  telemetry.rs  token_counter.rs
crates/llm/src/messages/: anthropic.rs  openai.rs  unified.rs
crates/llm/src/messages/unified/: from_anthropic.rs  from_openai.rs  to_anthropic.rs  to_openai.rs
crates/llm/src/protocol/: anthropic.rs  unknown_fields.rs
crates/llm/src/protocol/anthropic/: error.rs  messages.rs
crates/llm/src/protocol/anthropic/messages/: cache_control.rs  context_management.rs  doc.md  input_message.rs  mcp_server.rs  request.rs  response.rs  response_content.rs  sse.md  sse.rs  tool.rs
crates/llm/src/provider/: anthropic.rs  bedrock.rs  google.rs  http_client.rs  model_manager.rs  openai.rs
crates/llm/src/provider/anthropic/: input.rs  output.rs
crates/llm/src/provider/anthropic/input/: openai.rs
crates/llm/src/provider/anthropic/output/: openai.rs
crates/llm/src/provider/bedrock/: families.rs  input.rs  output.rs  streaming.rs  transform.rs
crates/llm/src/provider/bedrock/input/: openai.rs
crates/llm/src/provider/bedrock/output/: openai.rs
crates/llm/src/provider/google/: input.rs  output.rs
crates/llm/src/provider/google/input/: openai.rs
crates/llm/src/provider/google/output/: openai.rs
crates/llm/src/provider/openai/: input.rs  output.rs
crates/llm/src/provider/openai/input/: openai.rs
crates/llm/src/provider/openai/output/: openai.rs
crates/llm/src/provider_mode/: proxy.rs
crates/llm/src/proxy/: anthropic.rs
crates/llm/src/proxy/anthropic/: forward.rs  v1_messages.rs
crates/llm/src/proxy/utils/: headers.rs
crates/llm/src/server/: builder.rs  handler.rs  metrics.rs  model_discovery.rs  service.rs  tracing.rs
crates/llm/src/server/metrics/: stream.rs
crates/llm/src/server/tracing/: stream.rs
crates/llm/src/telemetry/: chat.rs
crates/llm/src/telemetry/chat/: metrics.rs  tracing.rs
crates/mcp/: Cargo.toml  README.md
crates/mcp/src/: access.rs  cache.rs  downstream.rs  http_handler.rs  index.rs  lib.rs  pmcp_http_handler.rs  pmcp_server.rs  server.rs  types.rs
crates/mcp/src/downstream/: client.rs  ids.rs
crates/mcp/src/server/: builder.rs  execute.rs  metrics.rs  search.rs  tracing.rs
crates/mcp/src/server/search/: grouped.rs
crates/rate-limit/: Cargo.toml
crates/rate-limit/src/: manager.rs  token.rs
crates/rate-limit/src/storage/: redis.rs
crates/rate-limit/src/storage/redis/: tracing.rs
crates/serde-dynamic-string/: Cargo.toml
crates/server/: CLAUDE.md  Cargo.toml
crates/server/src/: auth.rs  client_id.rs  cors.rs  csrf.rs  error.rs  lib.rs  logger.rs  rate_limit.rs  tracing.rs  well_known.rs
crates/server/src/auth/: error.rs  jwks.rs  jwt.rs  layer.rs
crates/telemetry/: CLAUDE.md  Cargo.toml
crates/telemetry/src/: attributes.rs  lib.rs  logs.rs  metadata.rs  metrics.rs  tracing.rs
crates/telemetry/src/metrics/: console.rs  names.rs  recorder.rs
crates/telemetry/src/tracing/: console.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  lib.rs  orchestrator.rs  poll.rs  runner.rs  ui.rs
crates/tui/src/ui/: logs.rs  metrics.rs  snapshots.rs  traces.rs
crates/tui/src/ui/metrics/: latency_chart.rs  model_table.rs  palette.rs  token_chart.rs
nexus/: Cargo.toml
nexus/src/: args.rs  logger.rs  main.rs
research/: audit-integrations.md  audit-logging.md  logs.md
(+44 files in other folders)
