[workspace]
members = ["crates/config", "nexus"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MPL-2.0"
homepage = "https://grafbase.com"
keywords = ["nexus", "llm", "ai", "mcp"]
repository = "https://github.com/grafbase/nexus"

[workspace.dependencies]
anyhow = "1.0.98"
clap = "4.5.41"
fastrace = "0.7.14"
indoc = "2.0.6"
insta = "1.43.1"
log = "0.4.27"
logforth = "0.26.1"
serde = "1.0.219"
tokio = { version = "1.46.1", default-features = false }
toml = "0.9.2"

[profile.release]
lto = "thin"

[workspace.lints.rust]
nonstandard-style = "deny"
rust-2018-idioms = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
panic = "deny"
