[package]
name = "nexus"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
fastrace = { workspace = true, features = ["enable"] }
log = { workspace = true, features = ["kv_unstable_std"] }
logforth = { workspace = true, features = ["append-fastrace", "colored", "diagnostic-fastrace", "layout-json"] }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "tokio-macros"] }

[lints]
workspace = true
