[package]
name = "config"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }

[lints]
workspace = true

[dev-dependencies]
indoc.workspace = true
insta.workspace = true
toml.workspace = true
