[package]
name = "context"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
jwt-compact.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true

[lints]
workspace = true
