[package]
name = "llm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
aws-config.workspace = true
aws-credential-types.workspace = true
aws-sdk-bedrock.workspace = true
aws-sdk-bedrockruntime.workspace = true
aws-smithy-runtime-api.workspace = true
aws-smithy-types.workspace = true
axum.workspace = true
axum-serde.workspace = true
config.workspace = true
eventsource-stream.workspace = true
fastrace = { workspace = true, features = ["enable"] }
fastrace-futures.workspace = true
fastrace-utils.workspace = true
futures.workspace = true
header-rules.workspace = true
itertools.workspace = true
log.workspace = true
opentelemetry.workspace = true
rate-limit.workspace = true
regex.workspace = true
reqwest = { workspace = true, features = ["json", "stream"] }
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sonic-rs.workspace = true
telemetry.workspace = true
thiserror.workspace = true
tiktoken-rs.workspace = true
tokio = { workspace = true, features = ["sync"] }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
indoc.workspace = true
insta.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
toml.workspace = true

[lints]
workspace = true
