[package]
name = "mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
axum.workspace = true
config.workspace = true
convert_case.workspace = true
futures-util.workspace = true
http.workspace = true
indoc.workspace = true
itertools.workspace = true
log = { workspace = true, features = ["kv"] }
oauth2.workspace = true
reqwest.workspace = true
rmcp = { workspace = true, features = [
    "client",
    "reqwest",
    "transport-sse-client",
    "transport-streamable-http-client",
    "transport-streamable-http-server",
    "auth",
    "transport-io",
    "client-side-sse",
] }
schemars.workspace = true
secrecy = "0.10.3"
serde = { workspace = true, features = ["derive"] }
tantivy.workspace = true
tokio = { workspace = true, features = ["sync"] }

[lints]
workspace = true
