[package]
name = "mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true

[features]
streamable-http = []

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
config.workspace = true
convert_case.workspace = true
futures-util.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
indoc.workspace = true
itertools.workspace = true
log = { workspace = true, features = ["kv"] }
mini-moka.workspace = true
rate-limit.workspace = true
reqwest.workspace = true
pmcp.workspace = true
schemars.workspace = true
secrecy.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
tantivy.workspace = true
tokio = { workspace = true, features = ["process", "time", "macros"] }
tokio-stream.workspace = true
url.workspace = true
uuid.workspace = true

[lints]
workspace = true
