[package]
name = "rate-limit"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
config.workspace = true
deadpool.workspace = true
fastrace = { workspace = true, features = ["enable"] }
governor.workspace = true
log.workspace = true
md5.workspace = true
mini-moka.workspace = true
opentelemetry.workspace = true
redis.workspace = true
telemetry.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }
