[package]
name = "telemetry"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
config.workspace = true
fastrace = { workspace = true, features = ["enable"] }
fastrace-opentelemetry.workspace = true
http.workspace = true
log.workspace = true
logforth.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
opentelemetry_sdk.workspace = true
tokio.workspace = true

[lints]
workspace = true
