[package]
name = "tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
fastrace.workspace = true
log.workspace = true
ratatui.workspace = true
telemetry.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["sync"] }
tokio-util.workspace = true

[lints]
workspace = true
